# Messenger

./: .gitignore  CMakeLists.txt  README.md
include/: Chatroom.hpp  Client.h  Client.hpp  ClientApp.hpp  ClientModel.hpp  ClientView.hpp  Message.h  Message.hpp  Message2.hpp  NetController.hpp  Observer.hpp  Participant.hpp  Server.h  Server.hpp  Session.hpp  chat_message.hpp  chat_participant.hpp  chat_room.hpp  chat_session.hpp  configs.h
include/client_headers/: Client.hpp  ClientApp.hpp  ClientModel.hpp  ClientUI.hpp  ClientView.hpp  CursesChat.hpp  CursesComponent.hpp  CursesDialog.hpp  CursesInputWindow.hpp  CursesTerminal.hpp  CursesUI.hpp  NcursesChat.hpp  NcursesDialog.hpp  NcursesInputWindow.hpp  NcursesTerminal.hpp  NcursesView.hpp  NetController.hpp  Observer.hpp
include/lib_headers/: Message.hpp  ncurses-api.hpp
include/server_headers/: AccountData.hpp  Chatroom.hpp  ChatroomData.hpp  Participant.hpp  Server.hpp  ServerData.hpp  Session.hpp
source/: main.cpp
source/client/: Client.cpp  ClientApp.cpp  ClientModel.cpp  ClientUI.cpp  ClientView.cpp  CursesChat.cpp  CursesComponent.cpp  CursesDialog.cpp  CursesInputWindow.cpp  CursesTerminal.cpp  CursesUI.cpp  NcursesChat.cpp  NcursesDialog.cpp  NcursesInputWindow.cpp  NcursesTerminal.cpp  NcursesView.cpp  NetController.cpp  chat_client.cpp  client_main.cpp  main.cpp
source/lib/: Message.cpp  Message2.cpp
source/server/: AccountData.cpp  ChatParticipant.cpp  Chatroom.cpp  ChatroomData.cpp  Server.cpp  ServerData.cpp  Session.cpp  chat_room.cpp  chat_server.cpp  chat_session.cpp  main.cpp  server_main.cpp
source/tut/: sig_hand  sig_hand.cpp  syn_client  syn_client.cpp  syn_server  syn_server.cpp  timer  timer.cpp  timer2  timer2.cpp
